# metronome

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
.cargo/: config.toml
.github/workflows/: build.yml
assets/maps/: balloon.mtn  black_world.txt  here_comes_a_thought.mtn  metronome_test.txt  test.mtn  test.txt
assets/maps/metronome/: mtn_01.mtb  mtn_02.mtb  test.mtb
assets/maps/mtb/: balloon.mtb  black_world.mtb  competent.mtb  here_comes_a_thought.mtb  mtn_01.mtb  new_magic_wand.mtb  see_you_again.mtb  stronger_than_you.mtb  test.mtb
assets/maps/mtn/: black_world.mtn  competent.mtn  mtn_01.mtn  new_magic_wand.mtn  see_you_again.mtn  stronger_than_you.mtn  test.mtn
assets/maps/osu/: balloon.mtb  black_world.mtb  competent.mtb  here_comes_a_thought.mtb  new_magic_wand.mtb  see_you_again.mtb  stronger_than_you.mtb
src/: animator.rs  constants.rs  eadk.rs  main.rs  map.rs  menu.rs  storage.rs
src/eadk/: display.rs  external.rs  keyboard.rs  macros.rs  mod.rs  panic_handler.rs  utils.rs
src/game/: frame.rs  game.rs  input.rs  map.rs  mod.rs  painter.rs  timer.rs
src/map/: maps.rs  mod.rs  storage.rs
src/maps/: test.rs
src/storage/: storage.c  storage.h
